cli/tests/snapshot/snapshots/snapshot__eval_stderr_json_but_its_yaml.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: json parse error: expected ident at line 1 column 2
  ┌─ [IMPORTS_PATH]/map.yaml:1:2
  │
1 │ foo: 1
  │  ^
  │
  ┌─ [INPUTS_PATH]/errors/json_but_its_yaml.ncl:3:1
  │
3 │ import "../../imports/map.yaml" as 'Json
  │ ---------------------------------------- imported here
